--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-colorful": "^5.5.1",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "svgo": "^2.8.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
